workloads/vlp-fluentd-daemonset.yaml
# Fluentd plugin for VMware Log Insight
# 
# Copyright 2018 VMware, Inc. All Rights Reserved. 
# 
# This product is licensed to you under the MIT license (the "License").  You may not use this product except in compliance with the MIT License.  
# 
# This product may include a number of subcomponents with separate copyright notices and license terms. Your use of these subcomponents is subject to the terms and conditions of the subcomponent's license, as noted in the LICENSE file. 
# 
# SPDX-License-Identifier: MIT


---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: "log-collector"
  namespace: "kube-system"
  labels:
    app: "log-collector"
    version: v1
spec:
  selector:
    matchLabels:
      app: "log-collector"
  revisionHistoryLimit: 3
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      # How many pods can be unavailable during the rolling update.
      maxUnavailable: 3
  template:
    metadata:
      annotations:
        # One may use this annotation to trigger rollout whenever fluentd config changes
        configHash: GENERATED_HASH
      labels:
        app: "log-collector"
        version: v1
    spec:
      containers:
        - name: "log-collector"
          image: "my-container-hub.com/log-collector:1.0.0"
          command: ["fluentd", "-c", "/fluentd/etc/fluent.conf", "-p", "/fluentd/plugins"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: runlogjournal
              mountPath: /run/log/journal
            - name: fluentdconfig
              mountPath: /fluentd/etc
      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: runlogjournal
          hostPath:
            path: /run/log/journal
        - name: fluentdconfig
          configMap:
            name: "fluentd-config"
