workloads/vlp-cloud-health-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vlp-cloud-health-service
  namespace: vlp-cloud-health-service
  labels:
    app: vlp-cloud-health-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/scheme: "http"
    prometheus.io/path: /metrics
    prometheus.io/port: "8088"
    
spec:
  type: NodePort
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
      name: http
  selector:
    app: vlp-cloud-health-service
