workloads/vlp-events-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vlp-events-service
  namespace: vlp-events-service
  labels:
    app: vlp-events-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: vlp-events-service
