workloads/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "grafana-ingress"
  namespace: "grafana"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
  labels:
    app: grafana-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "grafana"
              servicePort: 80
